LLM: Refactor LLMService to LCEL and fix dependencies for Python 3.13

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ aiohttp
 sentence-transformers
 chromadb
 google-generativeai
-langchain
+langchain-core
 langchain-google-genai
 pytest
 pytest-asyncio
